[gd_scene load_steps=18 format=3 uid="uid://diud7kw0rfwfc"]

[ext_resource type="PackedScene" uid="uid://t1qapbdlfqnh" path="res://assets/objects/staticNoCollision/staNoCo_algae2.tscn" id="1_byvas"]
[ext_resource type="PackedScene" uid="uid://bb7t2rtlp7sku" path="res://scenes/levels/groundBase.tscn" id="1_ow8i4"]
[ext_resource type="Script" path="res://scenes/levels/level_5.gd" id="1_xyvkm"]
[ext_resource type="PackedScene" uid="uid://hph0vdl7puii" path="res://scenes/player/player.tscn" id="3_jqsr4"]
[ext_resource type="PackedScene" uid="uid://dq54q68pmwd6u" path="res://assets/objects/moveables/moveable_box.tscn" id="4_a4uii"]
[ext_resource type="PackedScene" uid="uid://bofqt6oyryhyo" path="res://assets/objects/statics/target_truck.tscn" id="6_5hbby"]
[ext_resource type="PackedScene" uid="uid://cibr5e7jyyld6" path="res://assets/art/spritesAquarium/waves.tscn" id="7_42tgh"]
[ext_resource type="PackedScene" uid="uid://cf618ai8wa2sn" path="res://assets/objects/statics/static_skull.tscn" id="8_rna0v"]
[ext_resource type="PackedScene" uid="uid://b1k68xp6vdvd3" path="res://assets/objects/statics/static_column.tscn" id="9_0fgv0"]
[ext_resource type="PackedScene" uid="uid://dbba0xayt6m1u" path="res://assets/objects/staticNoCollision/staNoCo_algae1.tscn" id="9_xjbni"]
[ext_resource type="PackedScene" uid="uid://d2xyedecm45dw" path="res://scenes/pausemenue/pause_menu.tscn" id="11_6ltb0"]
[ext_resource type="PackedScene" uid="uid://bjobche7h23v4" path="res://scenes/Charakters/customer_circle.tscn" id="12_x45wr"]
[ext_resource type="PackedScene" uid="uid://dnwe61pi7nkh0" path="res://assets/objects/statics/static_beam.tscn" id="13_d20pe"]
[ext_resource type="AudioStream" uid="uid://bqkiebbykolmd" path="res://assets/sounds/music/BUBBLEMAN_Ukulele.mp3" id="14_n8jip"]
[ext_resource type="PackedScene" uid="uid://br3gofdtli8gj" path="res://scenes/levels/clock_n_score/clock.tscn" id="15_7x6w2"]
[ext_resource type="PackedScene" uid="uid://bmvo53bilb8gv" path="res://scenes/levels/clock_n_score/score.tscn" id="16_ept1r"]

[sub_resource type="SystemFont" id="SystemFont_fmwn4"]
font_names = PackedStringArray("Frank Ruehl CLM")

[node name="Level5" type="Node2D"]
script = ExtResource("1_xyvkm")
level_number = 5

[node name="staNoCo_algae4" parent="." instance=ExtResource("1_byvas")]
position = Vector2(1567, -501)
scale = Vector2(0.5, 0.5)

[node name="groundBase" parent="." instance=ExtResource("1_ow8i4")]

[node name="Player" parent="." instance=ExtResource("3_jqsr4")]
z_index = 1
position = Vector2(418, -428)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(952, -524)

[node name="MoveableBox" parent="." instance=ExtResource("4_a4uii")]
position = Vector2(499, -962)

[node name="TargetTruck" parent="." instance=ExtResource("6_5hbby")]
position = Vector2(1521, -901)
scale = Vector2(0.5, 0.5)

[node name="waves" parent="." instance=ExtResource("7_42tgh")]
position = Vector2(0, -2)

[node name="StaticColumn" parent="." instance=ExtResource("9_0fgv0")]
position = Vector2(597, -324)
scale = Vector2(0.5, 0.5)

[node name="StaticColumn2" parent="." instance=ExtResource("9_0fgv0")]
position = Vector2(792, -369)
scale = Vector2(0.5, 0.7)

[node name="StaticColumn4" parent="." instance=ExtResource("9_0fgv0")]
position = Vector2(988, -376)
scale = Vector2(0.5, 0.45)

[node name="StaticColumn3" parent="." instance=ExtResource("9_0fgv0")]
position = Vector2(1108, -1106)
scale = Vector2(0.5, -1)

[node name="StaticColumn5" parent="." instance=ExtResource("9_0fgv0")]
position = Vector2(630, -1205)
scale = Vector2(0.5, -1)

[node name="StaticSkull" parent="." instance=ExtResource("8_rna0v")]
position = Vector2(1490, -334)
scale = Vector2(0.3, 0.3)

[node name="staNoCo_algae1" parent="." instance=ExtResource("9_xjbni")]
z_index = -1
position = Vector2(1194, -377)
scale = Vector2(0.5, 0.3)

[node name="staNoCo_algae2" parent="." instance=ExtResource("9_xjbni")]
position = Vector2(715, -382)
scale = Vector2(0.5, 0.3)

[node name="staNoCo_algae3" parent="." instance=ExtResource("9_xjbni")]
position = Vector2(1329, -311)
scale = Vector2(0.5, 0.3)

[node name="Pause_Menu" parent="." instance=ExtResource("11_6ltb0")]

[node name="LabelLevel" type="Label" parent="."]
z_index = 1
offset_left = 32.0
offset_top = -994.0
offset_right = 266.0
offset_bottom = -898.0
theme_override_fonts/font = SubResource("SystemFont_fmwn4")
theme_override_font_sizes/font_size = 80
text = "Tricky"

[node name="CustomerCircle" parent="." instance=ExtResource("12_x45wr")]
z_index = 1
position = Vector2(1754, -159)

[node name="StaticBeam" parent="." instance=ExtResource("13_d20pe")]
z_index = -1
position = Vector2(1534, -813)
scale = Vector2(0.5, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_n8jip")
volume_db = -4.0
autoplay = true

[node name="BubblemanUkulele" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("14_n8jip")

[node name="Clock" parent="." instance=ExtResource("15_7x6w2")]

[node name="Score" parent="." instance=ExtResource("16_ept1r")]

[connection signal="dmg_taken" from="MoveableBox" to="Score" method="_on_moveable_box_dmg_taken"]
[connection signal="win" from="TargetTruck" to="." method="_on_target_truck_win"]
[connection signal="game_start" from="Pause_Menu" to="Clock" method="_on_pause_menu_game_start"]
